@@ -297,6 +297,10 @@ static const char* Copyright = "(C) Copyright Michigan State University 1994, Al
 /*
    Change Log:
    $Log$
+   Revision 5.1.2.2  2005/05/02 15:51:21  ron-fox
+   First passes at getting compilations on Intel C++: then
+   fix defect 159: Open filters on exit can lose data.
+
    Revision 5.1.2.1  2004/12/21 17:51:15  ron-fox
    Port to gcc 3.x compilers.
 
@@ -735,7 +739,8 @@ void pane_db::zoom()
 void pane_db::unzoom()
 {
    Widget wf;
-   Dimension width, height;
+   //  dead code
+   //   Dimension width, height;
    int row, column;
    Widget shell;
    
@@ -763,9 +768,9 @@ void pane_db::unzoom()
    f->UnManage();
    manager_widget->UnManage();
 
-
-  height = height / ny() - 1;
-  width  = width  / nx() - 1;
+   // Not sure why these are here, but they are clearly dead code.
+   //  height = height / ny() - 1;
+   //  width  = width  / nx() - 1;
 
   row = column =  0;
   for(int j = 0; j < ny(); j++) {
