@@ -325,8 +325,8 @@ class CXamineButtonException   : public CException
 {
   Int_t          m_nError;	// Error code responsible for the exception
   CXamineButton* m_pButton;	// Button which is causing the problem.
-  Bool_t         m_fFormatted;
-  STD(stringstream)      m_ReasonText; 
+  mutable Bool_t         m_fFormatted;
+  mutable STD(stringstream)      m_ReasonText; 
   
 public:
 
@@ -385,8 +385,8 @@ protected:
   // Member operations:
 
 public:                   
-  virtual   const char* ReasonText ()  ;
-  virtual   Int_t ReasonCode ()  ;
+  virtual   const char* ReasonText ()  const;
+  virtual   Int_t ReasonCode ()  const;
  
   // Protected utilities:
 
